--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>
-        Mosaddek Parsonal Information
+        Mosaddek's Portfolio
     </title>
 
     <style>
